@@ -24,8 +24,6 @@ extern char *version_cflags;
 #define VIM_VERSION_MINOR_STR STR(VIM_VERSION_MINOR)
 #define VIM_VERSION_100     (VIM_VERSION_MAJOR * 100 + VIM_VERSION_MINOR)
 
-// used for the runtime directory name
-#define VIM_VERSION_NODOT "vim" VIM_VERSION_MAJOR_STR VIM_VERSION_MINOR_STR
 // swap file compatibility (max. length is 6 chars)
 #define VIM_VERSION_SHORT VIM_VERSION_MAJOR_STR "." VIM_VERSION_MINOR_STR
 
